# SwearBot

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Makefile  README.md  TODO.md  env.template  main.py  pyproject.toml  pytest.ini  ruff.toml  start.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/actions/setup-python-with-uv/: action.yml
.github/workflows/: ci.yml  docker.yml  pyright.yml  ruff.yml  test.yml
src/: __init__.py  audio_jobs.py  audio_sfx_jobs.py  discord_utils.py  main.py  multi_audio_source.py  utils.py  youtube_audio.py  youtube_jobs.py
src/audio_handlers/: __init__.py  multi_audio_source.py  youtube_audio.py
src/balaambot/: __init__.py  config.py  discord_utils.py  main.py  utils.py
src/balaambot/audio_handlers/: multi_audio_source.py  youtube_audio.py  youtube_utils.py
src/balaambot/bot_commands/: __init__.py  bot_commands.py  cat_commands.py  music_commands.py  sfx_commands.py
src/balaambot/cats/: __init__.py  cat_handler.py
src/balaambot/schedulers/: audio_sfx_jobs.py  youtube_download_worker.py  youtube_jobs.py
src/balaambot/sfx/: __init__.py  audio_sfx_jobs.py
src/balaambot/youtube/: __init__.py  audio.py  download.py  jobs.py  metadata.py  utils.py  youtube_download_worker.py  youtube_jobs.py
src/bot_commands/: bot_commands.py  joke_commands.py  music_commands.py  sfx_commands.py
src/schedulers/: __init__.py  youtube_jobs.py
tests/: test_audio_jobs.py  test_discord_utils.py  test_main.py  test_multi_audio_source.py  test_utils.py
tests/audio_handlers/: demo_youtube_audio.py  test_multi_audio_source.py  test_youtube_audio.py  test_youtube_utils.py
tests/cats/: test_cat_handler.py
tests/schedulers/: test_audio_sfx_jobs.py  test_youtube_jobs.py
tests/sfx/: test_audio_sfx_jobs.py
tests/youtube/: demo_youtube_audio.py  test_audio.py  test_youtube_audio.py  test_youtube_download_worker.py  test_youtube_jobs.py  test_youtube_utils.py
